--- a/src/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -2,8 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
+    width: 100%;
 }
 .container {
     width: var(--default-layout-width);
     display: flex;
+    height: calc(100vh - var(--default-layout-header-height));
+    width: 100%;
+    overflow: hidden;
+}
+.content {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    overflow: auto;
 }
