--- a/src/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
+++ b/src/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
@@ -1,6 +1,8 @@
 .wrapper {
     //display: flex;
-    width: 356px;
+    width: var(--default-layout-sidebar-width);
+    height: 100%;
+
 }
 .container {
     width: var(--default-layout-width);
