--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,12 +1,13 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=roboto:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 :root {
     --primary: rgba(254, 44, 85, 1);
     --black: #000;
     --text-color: #333;
     //default layout
     --default-layout-header-height: 68px;
-    --default-layout-width: 1150px;
+    --default-layout-sidebar-width: 288px;
+    --default-layout-width: 100%;
 }
 * {
     margin: 0;
@@ -22,16 +23,16 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
-    color: var(--text-color);
+    // color: var(--text-color);
 }
 button,
 input,
 [tabindex] {
     outline: none;
-    border: none;
+    // border: none;
 }
 a[href] {
-    color: var(--text-color);
+    // color: var(--text-color);
     text-decoration: none;
 }
 
