--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,9 +1,11 @@
 .Wrapper {
+    position: relative;
     width: 100%;
-    max-height: min((100vh - 96px) - 60px, 734px);
+    height: 100%;
+    // max-height: min((100vh - 96px) - 60px, 734px);
     border-radius: 8px;
 
     background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
-    overflow: hidden auto;
+    overflow: hidden;
 }
